--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@microsoft/sp-listview-extensibility": "1.15.0",
     "@microsoft/sp-lodash-subset": "1.15.0",
     "@microsoft/sp-office-ui-fabric-core": "1.15.0",
-    "gd-sprest-bs": "^10.7.3",
-    "tslib": "2.3.1",
     "@microsoft/sp-property-pane": "1.15.0",
-    "@microsoft/sp-webpart-base": "1.15.0"
+    "@microsoft/sp-webpart-base": "1.15.0",
+    "gd-sprest-bs": "^10.7.4",
+    "tslib": "2.3.1"
   },
   "devDependencies": {
     "@microsoft/eslint-config-spfx": "1.15.0",
